--- a/src/main/res/values/configuration.xml
+++ b/src/main/res/values/configuration.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="modify_action">modifyProduct.php</string>
     <string name="lookup_action">findProduct.php</string>
-    <string name="server_base_url">http://app.vegansamfunnet.no</string>
+    <string name="server_base_url">http://vegetarguide.herokuapp.com</string>
 
 </resources>
