--- a/src/main/res/layout/splashscreen.xml
+++ b/src/main/res/layout/splashscreen.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="@android:color/black"
+              android:background="#526E17"
               android:id="@+id/screen">
 
     <ImageView
