--- a/src/main/res/layout/splashscreen.xml
+++ b/src/main/res/layout/splashscreen.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:background="#526E17"
-              android:id="@+id/screen">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#526E17"
+    android:id="@+id/screen">
 
     <ImageView
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:src="@drawable/splashscreen"
-            />
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:gravity="center"
+        android:src="@drawable/splashscreen" />
 
 </LinearLayout>
