--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -20,10 +20,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/scanning_headline"
+                android:textStyle="bold"
                 android:textSize="30sp"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/scanning_headline"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"
+                android:textColor="#526021" />
 
             <TextView
                 android:layout_marginTop="10dp"
@@ -42,6 +44,10 @@
                 android:id="@+id/scan_button"
                 android:layout_below="@+id/scanning_instructions"
                 android:layout_centerHorizontal="true"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="48dp"
                 android:textSize="42sp" />
 
@@ -53,6 +59,10 @@
                 android:layout_below="@+id/scan_button"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="48dp"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textSize="42sp" />
 
         </RelativeLayout>
