--- a/src/main/res/drawable/rounded_corners_green_bg.xml
+++ b/src/main/res/drawable/rounded_corners_green_bg.xml
@@ -2,8 +2,9 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
+
         <shape>
-            <gradient android:startColor="#628120" android:centerColor="#5c7625" android:endColor="#526E17" android:angle="90" android:type="linear" />
+            <gradient android:startColor="#607F1D" android:centerColor="#6E8739" android:endColor="#3B500F" android:angle="90" android:type="linear" />
             <stroke android:width="2dp" android:color="#526021" />
             <corners android:radius="10dp" />
             <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
@@ -12,7 +13,7 @@
 
     <item>
         <shape>
-            <gradient android:endColor="#628120" android:centerColor="#5c7625" android:startColor="#526E17" android:angle="90" android:type="linear" />
+            <gradient android:endColor="#607F1D" android:centerColor="#6E8739" android:startColor="#3B500F" android:angle="90" android:type="linear" />
             <stroke android:width="2dp" android:color="#526021" />
             <corners android:radius="10dp" />
             <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
