--- a/src/main/res/layout/activity_verify_additives.xml
+++ b/src/main/res/layout/activity_verify_additives.xml
@@ -65,8 +65,7 @@
             android:hint="@string/additives_verification_user_detail_hint"
             android:inputType="textCapSentences|textMultiLine"
             android:ems="10"
-            android:gravity="left|top"
-            />
+            android:gravity="left|top" />
 
         <Button
             android:id="@+id/submitConfirmedAdditives"
