--- a/src/main/res/layout/activity_modify_product.xml
+++ b/src/main/res/layout/activity_modify_product.xml
@@ -221,6 +221,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="@string/product_modification_submit_label" />
 
         </RelativeLayout>
