--- a/src/main/res/layout/activity_product_details.xml
+++ b/src/main/res/layout/activity_product_details.xml
@@ -98,20 +98,30 @@
             android:layout_below="@+id/product_image"
             android:layout_marginTop="5dp"
             android:layout_centerHorizontal="true"
+            style="?android:attr/buttonBarStyle"
             android:id="@+id/button_row">
 
             <Button
                 android:id="@+id/scan_button"
+                style="?android:attr/buttonBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="50dp"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/label_new_search" />
 
             <Button
                 android:id="@+id/modify_button"
+                style="?android:attr/buttonBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_modify_product" />
+                android:text="@string/label_modify_product"
+                android:background="@drawable/rounded_corners_green_bg"
+                android:padding="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp" />
 
         </LinearLayout>
 
