--- a/src/main/res/layout/splashscreen.xml
+++ b/src/main/res/layout/splashscreen.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:gravity="center"
-        android:src="@drawable/splashscreen" />
+        android:src="@drawable/splashscreen"
+        android:contentDescription="@string/please_wait" />
 
 </LinearLayout>
