--- a/src/main/res/layout/fragment_uncertain_ingredients.xml
+++ b/src/main/res/layout/fragment_uncertain_ingredients.xml
@@ -7,76 +7,81 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.ObviouslyNotVegetarian.ObviouslyNotVegetarianFragment">
+    tools:context="no.vegetarguide.scanner.wizard.UncertainIngredients.UncertainIngredientsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        >
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/maybe_vegetarian_headline"
+            android:id="@+id/maybe_vegan_headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
-            android:text="Inneholdet produktet biter av dyrekropper? Kryss av for det varen inneholder:"
+            android:text="Inneholdet produktet tilsetningsstoffer som kan komme fra dyr? Kryss av for det varen inneholder:"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
         <CheckBox
             android:layout_marginTop="10dp"
-            android:id="@+id/animal_bodies"
+            android:id="@+id/animal_milk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/maybe_vegetarian_headline"
-            android:text="@string/animal_bodies_enumeration" />
+            android:layout_below="@+id/maybe_vegan_headline"
+            android:text="E-stoffer som kan ha animalsk opprinnelse  (LENKE)"
+            android:checked="false" />
 
 
         <CheckBox
-            android:layout_marginTop="10dp"
-            android:id="@+id/red_listed_additives"
+            android:id="@+id/animal_eggs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/animal_bodies"
-            android:text="@string/red_listed_ingredients" />
+            android:text="Andre tilsetningsstoffer som kan ha animalsk opprinnelse (LENKE)"
+            android:checked="false"
+            android:layout_below="@+id/animal_milk"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
 
         <CheckBox
-            android:layout_marginTop="10dp"
-            android:id="@+id/major_unspecified_additives"
+            android:id="@+id/insect_excretions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/red_listed_additives"
-            android:text="Uspesifiserte oljer og aromaer" />
+            android:text="Produsenten har bekreftet at produktet er vegansk"
+            android:checked="false"
+            android:layout_below="@+id/animal_eggs"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
 
         <EditText
-            android:id="@+id/obviously_not_vegetarian_comment"
+            android:id="@+id/maybe_vegan_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/major_unspecified_additives"
-            android:hint="Hva inneholder varen av dyrekropper?" />
+            android:layout_below="@+id/insect_excretions"
+            android:minLines="2"
+            android:hint="Lim inn dokumentasjon fra produsent her, eller gi et sammendrag" />
 
 
         <Button
-            android:id="@+id/obviously_not_vegetarian_next_button"
+            android:id="@+id/maybe_vegan_next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/obviously_not_vegetarian_comment"
+            android:layout_below="@+id/maybe_vegan_comment"
             android:layout_marginTop="10dp"
-            android:text="Videre" />
+            android:text="Send inn" />
 
         <Button
-            android:id="@+id/obviously_not_vegetarian_cancel_button"
+            android:id="@+id/maybe_vegan_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/obviously_not_vegetarian_comment"
-            android:layout_toLeftOf="@+id/obviously_not_vegetarian_next_button"
+            android:layout_below="@+id/maybe_vegan_comment"
+            android:layout_toLeftOf="@+id/maybe_vegan_next_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:text="Tilbake" />
