--- a/src/main/res/layout/fragment_maybe_vegan.xml
+++ b/src/main/res/layout/fragment_maybe_vegan.xml
@@ -27,7 +27,7 @@
 
         <CheckBox
             android:layout_marginTop="10dp"
-            android:id="@+id/animal_milk"
+            android:id="@+id/animal_e_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/maybe_vegan_headline"
@@ -36,23 +36,23 @@
 
 
         <CheckBox
-            android:id="@+id/animal_eggs"
+            android:id="@+id/other_animal_derived_additives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Egg eller ingredienser laget av egg?\n(Eggehvite/albumin, eggeprotein og lysosomer (E1105).)"
             android:checked="false"
-            android:layout_below="@+id/animal_milk"
+            android:layout_below="@+id/animal_e_number"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
 
         <CheckBox
-            android:id="@+id/insect_excretions"
+            android:id="@+id/manufacturer_confirms_vegan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Honning eller andre ingredienser som kommer fra insekter?\n(Dronning-gelé, bivoks (E901) og shellakk (E904).)"
             android:checked="false"
-            android:layout_below="@+id/animal_eggs"
+            android:layout_below="@+id/other_animal_derived_additives"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -61,7 +61,7 @@
             android:id="@+id/maybe_vegan_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/insect_excretions"
+            android:layout_below="@+id/manufacturer_confirms_vegan"
             android:hint="Hva inneholder varen av ekskreter fra dyrekropper?" />
 
 
@@ -83,7 +83,7 @@
             android:layout_toLeftOf="@+id/maybe_vegan_next_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
-            android:text="Avbryt" />
+            android:text="Tilbake" />
 
     </RelativeLayout>
 
