--- a/src/main/res/layout/fragment_maybe_vegan.xml
+++ b/src/main/res/layout/fragment_maybe_vegan.xml
@@ -17,51 +17,97 @@
             android:id="@+id/maybe_vegan_headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true"
             android:text="Inneholdet produktet andre ingredienser fra dyr? Kryss av for det varen inneholder:"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-
-        <CheckBox
-            android:layout_marginTop="10dp"
-            android:id="@+id/contains_animal_milk"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/contains_animal_milk_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/maybe_vegan_headline"
-            android:text="Dyremelk eller ingredienser laget av dyremelk?\n(Laktose, melkesukker, myse, kasein og ghee.)"
-            android:checked="false" />
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/contains_animal_milk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Dyremelk eller ingredienser laget av dyremelk?" />
 
 
-        <CheckBox
-            android:id="@+id/contains_eggs"
-            android:layout_width="wrap_content"
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:onClick="showToolTip"
+                android:src="@android:drawable/ic_menu_help" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/contains_eggs_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Egg eller ingredienser laget av egg?\n(Eggehvite/albumin, eggeprotein og lysosomer (E1105).)"
-            android:checked="false"
-            android:layout_below="@+id/contains_animal_milk"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/contains_animal_milk_row"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/contains_eggs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="Egg eller ingredienser laget av egg?" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:onClick="showToolTip"
+                android:src="@android:drawable/ic_menu_help" />
+
+        </LinearLayout>
 
 
-        <CheckBox
-            android:id="@+id/contains_honey"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/contains_honey_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Honning eller andre ingredienser som kommer fra insekter?\n(Dronning-gelé, bivoks (E901) og shellakk (E904).)"
-            android:checked="false"
-            android:layout_below="@+id/contains_eggs"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/contains_eggs_row"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/contains_honey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Honning eller andre ingredienser som kommer fra insekter?" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:onClick="showToolTip"
+                android:src="@android:drawable/ic_menu_help" />
+
+        </LinearLayout>
 
 
+        <!-- TODO show this if any of the checkboxes are true -->
         <EditText
             android:id="@+id/maybe_vegan_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/contains_honey"
+            android:layout_below="@+id/contains_honey_row"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
             android:hint="Hva inneholder varen av ekskreter fra dyrekropper?" />
 
 
@@ -80,9 +126,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/maybe_vegan_comment"
-            android:layout_toLeftOf="@+id/maybe_vegan_next_button"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_toLeftOf="@+id/maybe_vegan_next_button"
             android:text="Tilbake" />
 
     </RelativeLayout>
