--- a/src/main/res/layout/fragment_obviously_not_vegetarian.xml
+++ b/src/main/res/layout/fragment_obviously_not_vegetarian.xml
@@ -11,18 +11,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        >
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/maybe_vegetarian_headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true"
             android:text="Inneholdet produktet biter av dyrekropper? Kryss av for det varen inneholder:"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -79,7 +74,7 @@
             android:layout_toLeftOf="@+id/obviously_not_vegetarian_next_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
-            android:text="Avbryt" />
+            android:text="Tilbake" />
 
     </RelativeLayout>
 
