--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -11,8 +11,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/gtin_row"
@@ -66,8 +65,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:layout_below="@+id/name_row"
-            android:layout_marginTop="10dp"
-            >
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -112,9 +110,7 @@
         </LinearLayout>
 
 
-
-
-    <Button
+        <Button
             android:id="@+id/metainformation_next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,7 +118,7 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/brand_row"
             android:layout_marginTop="10dp"
-            android:text="Videre" />
+            android:text="@string/action_next" />
 
         <Button
             android:id="@+id/metainformation_cancel_button"
@@ -132,7 +128,7 @@
             android:layout_toLeftOf="@+id/metainformation_next_button"
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
-            android:text="Avbryt" />
+            android:text="@string/action_cancel" />
 
     </RelativeLayout>
 
