--- a/src/main/res/values/wizard.xml
+++ b/src/main/res/values/wizard.xml
@@ -3,5 +3,16 @@
 
     <string name="maybe_vegan_tooltip">Dyremelk: Laktose, melkesukker, myse, kasein og ghee.\nEgg: Eggehvite/albumin, eggeprotein og lysosomer (E1105).\nFra insekter: Dronning-gelé, bivoks (E901) og shellakk (E904).</string>
     <string name="maybe_vegan_tooltip_headline">Sjekkliste</string>
+    <string name="maybe_vegan_headline">Inneholdet produktet andre ingredienser fra dyr? Kryss av for det varen inneholder:</string>
+    <string name="maybe_vegan_comment_hint">Hva inneholder varen av ekskreter fra dyrekropper?</string>
+    <string name="contains_insect_excretions_label">Honning eller andre ingredienser som kommer fra insekter?</string>
+    <string name="contains_egg_label">Egg eller ingredienser laget av egg?</string>
+    <string name="contains_animal_milk">Dyremelk eller ingredienser laget av dyremelk?</string>
+
+    <string name="maybe_vegetarian_headline">Inneholdet produktet biter av dyrekropper? Kryss av for det varen inneholder:</string>
+
+    <string name="action_next">Videre</string>
+    <string name="action_previous">Tilbake</string>
+    <string name="action_cancel">Avbryt</string>
 
 </resources>
