Make wizard always end with same step. Improve text input fields

--- a/src/main/res/layout/fragment_maybe_vegan.xml
+++ b/src/main/res/layout/fragment_maybe_vegan.xml
@@ -107,6 +107,10 @@
             android:layout_below="@+id/contains_honey_row"
             android:layout_marginTop="10dp"
             android:visibility="gone"
+            android:inputType="textCapSentences|textMultiLine"
+            android:ems="10"
+            android:gravity="left|top"
+            android:minLines="2"
             android:hint="@string/maybe_vegan_comment_hint" />
 
 
