--- a/src/main/res/layout/fragment_obviously_not_vegetarian.xml
+++ b/src/main/res/layout/fragment_obviously_not_vegetarian.xml
@@ -53,6 +53,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:inputType="textCapSentences|textMultiLine"
+            android:ems="10"
+            android:gravity="left|top"
+            android:minLines="2"
             android:layout_below="@+id/major_unspecified_additives"
             android:hint="Hva inneholder varen av dyrekropper?" />
 
