--- a/src/main/res/layout/fragment_uncertain_ingredients.xml
+++ b/src/main/res/layout/fragment_uncertain_ingredients.xml
@@ -46,9 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Produsenten har bekreftet at produktet er vegansk"
-            android:layout_below="@+id/other_animal_derived_additives"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/other_animal_derived_additives" />
 
 
         <EditText
