--- a/src/main/res/layout/activity_obviously_not_vegetarian.xml
+++ b/src/main/res/layout/activity_obviously_not_vegetarian.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.vegetarguide.scanner.wizard.ObviouslyNotVegetarian"
+    tools:context="no.vegetarguide.scanner.wizard.CheckIfNotVegetarianAtAll"
     tools:ignore="MergeRootFrame" />
