--- a/src/main/res/layout/fragment_maybe_vegan.xml
+++ b/src/main/res/layout/fragment_maybe_vegan.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.MaybeVegan.MaybeVeganFragment">
+    tools:context="no.vegetarguide.scanner.wizard.CheckIfLactoOvoVegetarian.MaybeVeganFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -101,7 +101,7 @@
 
 
         <EditText
-            android:id="@+id/maybe_vegan_comment"
+            android:id="@+id/lacto_ovo_vegetarian_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/contains_honey_row"
@@ -120,7 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/maybe_vegan_comment"
+            android:layout_below="@+id/lacto_ovo_vegetarian_comment"
             android:layout_marginTop="10dp"
             android:text="@string/action_next" />
 
@@ -128,7 +128,7 @@
             android:id="@+id/maybe_vegan_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/maybe_vegan_comment"
+            android:layout_below="@+id/lacto_ovo_vegetarian_comment"
             android:layout_marginRight="50dp"
             android:layout_marginTop="10dp"
             android:layout_toLeftOf="@+id/maybe_vegan_next_button"
