--- a/src/main/res/layout/fragment_metainformation.xml
+++ b/src/main/res/layout/fragment_metainformation.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.MetaInformation.MetaInformationFragment">
+    tools:context="no.vegetarguide.scanner.wizard.RequestMetaInformation.MetaInformationFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
