--- a/src/main/res/layout/fragment_obviously_not_vegetarian.xml
+++ b/src/main/res/layout/fragment_obviously_not_vegetarian.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.ObviouslyNotVegetarian.ObviouslyNotVegetarianFragment">
+    tools:context="no.vegetarguide.scanner.wizard.CheckIfNotVegetarianAtAll.ObviouslyNotVegetarianFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
