--- a/src/main/res/layout/fragment_uncertain_ingredients.xml
+++ b/src/main/res/layout/fragment_uncertain_ingredients.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.UncertainIngredients.UncertainIngredientsFragment">
+    tools:context="no.vegetarguide.scanner.wizard.CheckIfVegan.UncertainIngredientsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
