--- a/src/main/res/layout/activity_check_if_not_vegetarian_at_all.xml
+++ b/src/main/res/layout/activity_check_if_not_vegetarian_at_all.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.vegetarguide.scanner.wizard.CheckIfLactoOvoVegetarian"
+    tools:context=".wizard.CheckIfNotVegetarianAtAll"
     tools:ignore="MergeRootFrame" />
