--- a/src/main/res/layout/activity_enough_information.xml
+++ b/src/main/res/layout/activity_enough_information.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".about.AboutActivity"
+    tools:context=".wizard.EnoughInformation"
     tools:ignore="MergeRootFrame" />
