--- a/src/main/res/layout/fragment_check_if_lacto_ovo_vegetarian.xml
+++ b/src/main/res/layout/fragment_check_if_lacto_ovo_vegetarian.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.CheckIfLactoOvoVegetarian.MaybeVeganFragment">
+    tools:context=".wizard.CheckIfLactoOvoVegetarian.CheckIfLactoOvoVegetarianFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
