--- a/src/main/res/layout/fragment_check_if_vegan.xml
+++ b/src/main/res/layout/fragment_check_if_vegan.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.CheckIfVegan.UncertainIngredientsFragment">
+    tools:context=".wizard.CheckIfVegan.CheckIfVeganFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,35 +18,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Inneholdet produktet tilsetningsstoffer som kan komme fra dyr? Kryss av for det varen inneholder:"
+            android:text="@string/contains_additives_of_possible_animal_origins"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
 
         <CheckBox
             android:layout_marginTop="10dp"
-            android:id="@+id/animal_e_number"
+            android:id="@+id/possible_animal_derived_additives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/uncertain_ingredients_headline"
-            android:text="E-stoffer som kan ha animalsk opprinnelse  (LENKE)" />
+            android:text="@string/possible_animal_derived_additives" />
 
-
-        <CheckBox
-            android:id="@+id/other_animal_derived_additives"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Andre tilsetningsstoffer som kan ha animalsk opprinnelse (LENKE)"
-            android:layout_below="@+id/animal_e_number"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
         <CheckBox
             android:id="@+id/manufacturer_confirms_vegan"
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Produsenten har bekreftet at produktet er vegansk"
-            android:layout_below="@+id/other_animal_derived_additives" />
+            android:text="@string/manufacturer_confirms_product_is_vegan"
+            android:layout_below="@+id/possible_animal_derived_additives" />
 
 
         <EditText
@@ -59,7 +49,7 @@
             android:ems="10"
             android:gravity="left|top"
             android:minLines="2"
-            android:hint="Lim inn dokumentasjon fra produsent her, eller gi et kort sammendrag" />
+            android:hint="@string/insert_documentation_from_manufacturer" />
 
 
         <Button
