--- a/src/main/res/layout/fragment_enough_information.xml
+++ b/src/main/res/layout/fragment_enough_information.xml
@@ -6,11 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="no.vegetarguide.scanner.wizard.EnoughInformation.AboutFragment">
+    tools:context=".wizard.EnoughInformation.EnoughInformationFragment">
 
     <TextView
         android:id="@+id/enough_information_headline"
-        android:text="Takk! Det er all informasjonen vi trenger."
+        android:text="@string/wizard_complete_thanks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:padding="10dp"
-        android:text="Send inn til redaksjonen"/>
+        android:text="@string/submit_for_approval"/>
 
     <Button
         android:layout_marginTop="10dp"
@@ -39,6 +39,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:padding="10dp"
-        android:text="Avbryt"/>
+        android:text="@string/cancel_wizard"/>
 
 </RelativeLayout>
